Fix CORS: Use CORS_ORIGIN instead of FRONTEND_URL

--- a/.env.example
+++ b/.env.example
@@ -26,8 +26,8 @@ EMAIL_USER=your-email@gmail.com
 EMAIL_PASSWORD=your-app-password
 EMAIL_FROM=noreply@gleamy.lk
 
-# Frontend URL
-FRONTEND_URL=http://localhost:5173
+# CORS Configuration
+CORS_ORIGIN=http://localhost:5173
 
 # WhatsApp API (Future Integration)
 WHATSAPP_API_KEY=your-whatsapp-api-key
