Update CORS configuration to support multiple origins

--- a/.env.example
+++ b/.env.example
@@ -26,8 +26,8 @@ EMAIL_USER=your-email@gmail.com
 EMAIL_PASSWORD=your-app-password
 EMAIL_FROM=noreply@gleamy.lk
 
-# CORS Configuration
-CORS_ORIGIN=http://localhost:5173
+# CORS Configuration (comma-separated for multiple origins)
+CORS_ORIGIN=http://localhost:5173,https://gleamycleaning.com,https://www.gleamycleaning.com,https://your-app.vercel.app
 
 # WhatsApp API (Future Integration)
 WHATSAPP_API_KEY=your-whatsapp-api-key
